# wgpututo

./: Cargo.toml  README.md  index.html
src/: challenge.wgsl  lib.rs  main.rs  shader.wgsl  texture.rs
