[package]
name = "wgpututo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18.0"
env_logger = "0.10"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.3.0"
wgpu = "0.18"
winit = "0.28"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[[bin]]
name = "game"
path = "src/main.rs"
